# DarthSheaf

./: .gitignore  CHANGELOG.md  CLAUDE.md  CramerGeneral.hs  DarthSheaf.cabal  LICENSE  LUGeneral-handover.md  PROGRESS.md  README.md  darthsheaf-scope.md  perf_bench_initial  results_26_05_10_001.txt
bench/: Main.hs
notes/: darthsheaf-blas-notes.md
src/: DarthSheaf.hs  cramerMemoized.lhs
src/DarthSheaf/: BlasL1.hs  BlasL2.hs  CramerGeneral.hs
test/: Main.hs
