cabal-version:      3.0
name:               DarthSheaf
version:            0.1.0.0
synopsis:           Extensible one-stop shop for linear algebra tasks
description:        A growing Haskell library for linear algebra: solving systems,
                    decompositions, and more.
license:            MIT
license-file:       LICENSE
author:             darthcoder
maintainer:         ab.ahmad@icloud.com
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md

library
    exposed-modules:
        DarthSheaf
        DarthSheaf.CramerGeneral
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.14 && <5,
        containers

test-suite dartsheaf-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.14 && <5,
        DarthSheaf,
        hspec
